TopBanner fix [deliver #105090614]

--- a/bower.json
+++ b/bower.json
@@ -6,14 +6,14 @@
     "eventEmitter": "~4.2.9",
     "fancybox": "~2.1.5",
     "fancybox-wannabe-fix": "https://raw.githubusercontent.com/srjsrj/fancyBox-wannabe/master/source/helpers/jquery.fancybox-thumbs.js",
-    "sticky-kit": "*",
     "OwlCarousel": "https://github.com/BrandyMint/OwlCarousel.git#~1.3.4",
     "bootstrap-sass-official": "~3.2.0",
     "compass-mixins": "~1.0.1",
     "font-awesome": "~4.1.0",
     "jquery.role": "git://github.com/kossnocorp/role#~1.3.1",
     "jQuery.mmenu": "~4.5.7",
-    "entypo-plus": "*"
+    "entypo-plus": "*",
+    "sticky-kit": "~1.1.2"
   },
   "devDependencies": {}
 }
