--- a/package.json
+++ b/package.json
@@ -80,14 +80,15 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-react": "^6.2.0",
+    "graceful-fs": "^4.1.11",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-bump": "^1.0.0",
+    "gulp-clean-css": "^3.0.4",
     "gulp-file-include": "^0.11.0",
     "gulp-flatten": "0.0.4",
     "gulp-gh-pages": "^0.5.2",
     "gulp-haml-coffee": "0.0.6",
-    "gulp-minify-css": "^1.2.4",
     "gulp-mocha-phantomjs": "^0.12.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
